Dummy content edits

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 	</h2>
 	<figure>
 		<a href="#">
-			<img src="https://placeimg.com/800/400/nature/grayscale" alt="Alt desc" />
+			<img src="assets/fwd19_release_teaser_fb.jpg" alt="FWD19" />
 		</a>    
 	</figure>
 </section>
@@ -25,17 +25,23 @@
 			</h3>
 			<div class="content-block--article">
 				<p>
-					Richard from Analogue Chat and It&#39;s not music baby interviews Hannes and Conor about past, present and future for the <a href="#">Forwind</a>
+					Richard from Analogue Chat and It's not music baby interviews Hannes and Conor about past, present and future for the Forwind project.
+				</p>
+				<p>
+					<iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&hide_artwork=1&feed=%2FAnalogueChat%2Fanalogue-chat-on-resonance-extra-interview-with-forwind-26th-april-2017%2F" frameborder="0" ></iframe>
+				</p>
+				<p>
+					 <a href="#">More</a>
 				</p>
 			</div>
 		</div>
 		<div class="column-block">
 			<h3 class="heading heading--article-title">
-				<a href="#">Analogue chat interview</a>
+				<a href="#">FWD18 - Thet Liturgiske Owäsendet - Wisconsin Mining State</a>
 			</h3>
 			<div class="content-block--article">
 				<p>
-					Our aim is to provide a platform for music that maximises expressive potential.
+					Thet Liturgiske Owäsendet are Linus Schrab and Johan Fotmeijer. Armed with guitars, field recordings and modular synths they've evolved their own brand of improvised soundscaping over a number of previous releases.While much of their output has tended to be long form, drone based textural explorations, this release opts for shorter running times and a greater variety in approach to both form and texture.
 				</p>
 				<p>
 					 <a href="#">More</a>
