resolved bug in image urls

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 	</h2>
 	<figure>
 		<a href="#">
-			<img src="assets/fwd19_release_teaser_fb.jpg" alt="FWD19" />
+			<img src="/assets/fwd19_release_teaser_fb.jpg" alt="FWD19" />
 		</a>    
 	</figure>
 </section>
@@ -171,6 +171,6 @@
 	</div>
 </section>
 <section class="content-block content-block__logos">
-	<a href="https://www.imro.ie/"><img class="img img__logo" src="assets/imro_logo.png" alt="IMRO" /></a>
-	<a href="http://state51.com/"><img class="img img__logo" src="assets/state51_logo.png" alt="State 51" /></a>
+	<a href="https://www.imro.ie/"><img class="img img__logo" src="/assets/imro_logo.png" alt="IMRO" /></a>
+	<a href="http://state51.com/"><img class="img img__logo" src="/assets/state51_logo.png" alt="State 51" /></a>
 </section>
