add player to release page, remove unnecessary layout includes

--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -58,7 +58,7 @@
         </div>
 
         <div class="content-block aside__widget">
-            <p>Music player</p>
+            <p><%= raw @release.stream_location %></p>
         </div>  
 
         <div class="content-block aside__widget">
