Issue #53: adjusting widths and breakpoints

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
 		</a>
 	</h2>
 	<div class="column-container column-container__2-cols">
-		<div class="column-block">
+		<div class="column-block column-block__no-flow">
 			<h3 class="heading heading--article-title">
 				<a href="#">Analogue chat interview</a>
 			</h3>
@@ -29,7 +29,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="column-block">
+		<div class="column-block column-block__no-flow">
 			<h3 class="heading heading--article-title">
 				<a href="#">Analogue chat interview</a>
 			</h3>
