--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <head>
     <title>forwind | <%= @context.downcase%></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google-site-verification" content="Oq2AaagB6c_NXK25RChwoHq0tn7yRod2WRabKCgsYD8" />
         <meta name="description" content="An independent music publishing label born in 2009. " />
         <meta name="keywords" content="Forwind, Jeff Carey, Clang Sayne, James O'Sullivan, CjC, Atom eye, Sonnamble, Fourth Page, Tomonari Nozaki, independent record label, London, electronic music"  />
