--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -27,7 +27,7 @@ body {
     font-family: $font-family-primary;
     background: $page-bg;
     color: $font-color-primary;
-    font-size: $font-size;
+    font-size: $base-font-size;
     line-height: 1.4;
     -webkit-font-smoothing: antialiased;    
 }
@@ -111,7 +111,7 @@ blockquote {
 		margin-bottom: $spacing-factor;
     }
     &--page-title {
-        font-size: $font-size-lg;
+        font-size: $font-size-md;
     }
     &--article-title {
         letter-spacing: $font-letter-spacing-heading;
@@ -203,7 +203,7 @@ blockquote {
             font-size: $font-size-sm;
             margin-bottom: $spacing-factor * 2;
             @include breakpoint(m) {
-                font-size: $font-size-md;
+                margin-bottom: $spacing-factor * 3;
             } 
             a {
                 @extend %alt-link;
@@ -218,9 +218,11 @@ blockquote {
                 display: inline-block;
             }
             .heading--article-title {
-                font-size: $font-size-lg;
+                font-size: $font-size-md;
             }
-            
+            @include breakpoint(m) {
+                height: auto;
+            } 
         }
         &--article {
             a {
@@ -248,7 +250,7 @@ blockquote {
     &--v-centered {
         align-items: center;
     }
-    @include breakpoint(s) {
+    @include breakpoint(m) {
         flex-direction: column;
     }
     .column-block {
@@ -256,13 +258,20 @@ blockquote {
         flex-grow: 1;
         &:last-child {
             margin-right: 0;
-            @include breakpoint(s) {
+            @include breakpoint(m) {
                 margin-right: auto;
             }
         }
         &__figure {
-            @include breakpoint(s) {
+            @include breakpoint(m) {
                 margin: 0 auto $spacing-factor * 2 auto;
+                width: 100%;
+            }
+        }
+        // isn't supposed to flow evenly onto a stacked sibling, like a paragraphy for example
+        &__no-flow {
+            @include breakpoint(m) {
+                margin-bottom: $spacing-factor * 2;
             }
         }
     }
@@ -287,6 +296,7 @@ blockquote {
                 @include breakpoint(m) {
                     order: 1;
                     flex-basis: 100%;
+                    align-self: unset;
                 }
             }
         }
@@ -295,8 +305,13 @@ blockquote {
         flex-basis: 50%;
         .column-block {
             width: 50%;
-            @include breakpoint(s) {
+            @include breakpoint(m) {
                 width: auto;
+            }
+            &__figure {
+                @include breakpoint(m) {
+                    width: 100%;
+                }
             }
         }
     }
@@ -326,6 +341,9 @@ blockquote {
             font-size: $font-size-lg;
         } 
     }
+    @include breakpoint(m) {
+        margin-bottom: $spacing-factor * 4;
+    }
 }
 
 .figcaption {
@@ -350,21 +368,31 @@ blockquote {
     &--center {
         margin: 0 auto $spacing-factor * 2 auto;
         display: block;
+        width: 100%;
     }
 
     &--right {
         float: right;
         margin: 0 0 $spacing-factor * 2 $spacing-factor * 2;
+        @include breakpoint(m) {
+            float: none;
+            margin: 0 0 $spacing-factor * 2 0;
+            width: 100%;
+        }
     }
 
     &--left {
         float: left;
         margin: 0 $spacing-factor * 2 $spacing-factor * 2 0;
+        @include breakpoint(m) {
+            float: none;
+            margin: 0 0 $spacing-factor * 2 0;
+        }
     }
     
     &__logo {        
         margin-right: $spacing-factor * 4;
-        @include breakpoint(s) {
+        @include breakpoint(m) {
             margin: 0 auto $spacing-factor auto;
             display: block;
         }
@@ -390,6 +418,9 @@ blockquote {
                 flex-basis: 75%;
             }
         }
+        @include breakpoint(m) {
+           font-size: $font-size-md;
+        }
     }
     caption {
         display: block;
@@ -401,8 +432,9 @@ blockquote {
         margin-left: $spacing-factor;
         th {
             height: $top-negative-margin - $spacing-factor;
-            font-size: $font-size-lg;
+            font-size: $font-size-md;
             padding-bottom: $spacing-factor * 2;
+            vertical-align: bottom;
         }
         .table-cell {
             font-family: $font-family-secondary;
@@ -416,7 +448,7 @@ blockquote {
             span {
                 display: block;
             }
-            @include breakpoint(s) {
+            @include breakpoint(m) {
                 font-size: $font-size-sm;
                 padding: 0 $spacing-factor / 2 $spacing-factor / 2 0;
             }
@@ -424,7 +456,7 @@ blockquote {
         .img--thumb {
             margin-right: $spacing-factor * 2;
             float: left;
-            @include breakpoint(s) {
+            @include breakpoint(m) {
                 margin-right: $spacing-factor;
             }
         }
