--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -13,8 +13,9 @@
             <li class="nav__menu-item <%= is_active?('/artists') %>">
                 <%= link_to_if( not_in_context("artists", nil, "index"), "Artists   ", { :controller => "artists" }) %>
             </li>
-            <li class="nav__menu-item <%= is_active?('/label') %>">
-                <a href="#">Label</a>
+            <li class="nav__menu-item <%= is_active?('/') %>">
+                <%= link_to_if( not_in_context("home", nil, "index"), "Label", { :controller => "home" }) %>
+                
             </li>
         </ul>
     </div>
