--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -2,8 +2,8 @@
     <section class="column-block column-block__main-content">
         <div class="content-block content-block__banner">
             <figure>
-                <a href="#">
-                    <img src="https://placeimg.com/400/400/nature/grayscale" alt="Alt desc" />
+                <a href="/assets/dummy-image-001.jpeg" class="gallery">
+                    <img src="/assets/dummy-image-001-med.jpeg" alt="Alt desc" />
                 </a>    
             </figure>
         </div>    
@@ -22,9 +22,9 @@
         -->
         <div class="content-block content-block__banner">
             <figure>
-                <a href="#">
-                    <img src="https://placeimg.com/400/400/nature/grayscale" alt="Alt desc" />
-                </a>    
+                <a href="/assets/dummy-image-001.jpeg" class="gallery">
+                    <img src="/assets/dummy-image-001-med.jpeg" alt="Alt desc" />
+                </a>  
             </figure>
         </div>    
 
@@ -107,5 +107,16 @@
             <span class="text-title"><a href="#">Big Banana 1</a> and <a href="#">Big Banana 2</a></span>
         </div> 
 
+        <section class="content-block aside__widget">
+            <a href="/assets/dummy-image-002.jpeg" class="gallery">
+                <img class="img" src="/assets/dummy-image-002-thumb.jpeg" alt="Alt desc" />
+            </a>
+            <a href="/assets/dummy-image-003.jpeg" class="gallery">
+                <img class="img" src="/assets/dummy-image-003-thumb.jpeg" alt="Alt desc" />
+            </a>
+            <a href="/assets/dummy-image-004.jpeg" class="gallery">
+                <img class="img" src="/assets/dummy-image-004-thumb.jpeg" alt="Alt desc" />
+            </a>
+        </section>
     </aside>
 </article>
