--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -27,7 +27,7 @@
         </script>
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Rosarivo" rel="stylesheet" />
-        <%= stylesheet_link_tag('base') %>
+        <%= stylesheet_link_tag('styles') %>
         <link rel="icon" href="/images/index/favicon.ico" type="image/x-icon" />
     </head>
     <body class="page--<%= controller.controller_name %>">
@@ -61,12 +61,12 @@
             </footer>
         </main>
         <%= javascript_include_tag "application" %>
-        <!--script src='http://www.google-analytics.com/ga.js' type='text/javascript'></script-->
+        <script src='http://www.google-analytics.com/ga.js' type='text/javascript'></script->
         <script type="text/javascript">
-            /* try{
+            try{
                 var pageTracker = _gat._getTracker("UA-8508337-1");
                 pageTracker._trackPageview();
-            } catch(err) {} */
+            } catch(err) {}
         </script>
     </body>
 </html>
