fix js in base layout, and tweak purchase text per release

--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -63,7 +63,7 @@
 
         <div class="content-block aside__widget">
             <a href=<%= @release.purchase %> class="link--button">
-                Purchase
+                Buy <%= @release.preferred_format %>/ Digital @ Bandcamp 
             </a>
         </div>  
 
