--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -40,7 +40,7 @@
             </footer>
         </main>
         <%= javascript_include_tag "application" %>
-        <script src='http://www.google-analytics.com/ga.js' type='text/javascript'></script
+        <script src='http://www.google-analytics.com/ga.js' type='text/javascript'></script>
         <script type="text/javascript">
             try{
                 var pageTracker = _gat._getTracker("UA-8508337-1");
