--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -223,7 +223,7 @@ blockquote {
             }
         }
         &--article {
-            width: 100%;
+            width: 70%;
             padding-top: $spacing-factor * 0.5;
             a {
                 @extend %alt-link;
@@ -244,6 +244,22 @@ blockquote {
             }
         }
     }
+}
+
+img.news-image-top {
+    width:50%;
+    margin-left: auto;
+    margin-right: auto;
+    float: right;
+    padding: 0 0 20px 10px;
+}
+
+.news-image-bottom {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    padding: 10px 0 0 0;
 }
 
 .content-block__banner {
