use redis for the main page banner

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,7 @@
 <h1 class="visually-hidden">Forwind &mdash; home</h1>
 
 <section class="content-block content-block__banner">
-	<h2 class="heading heading--floating-button">
-		<a href="#">Out now</a>
-	</h2>
-	<figure>
-		<a href="#">
-			<img src="https://s3-eu-west-1.amazonaws.com/forwind-net-images/assets/teaser_dummy.jpg" alt="FWD19" />
-		</a>    
-	</figure>
+	<%= raw banner %>
 </section>
 
 <section class="content-block">
@@ -121,8 +114,4 @@
 			</p>
 		</div>
 	</div>
-</section>
-<section class="content-block content-block__logos">
-	<a href="https://www.imro.ie/"><img class="img img__logo" src="https://s3-eu-west-1.amazonaws.com/forwind-net-images/assets/imro_logo.png" alt="IMRO" /></a>
-	<a href="http://state51.com/"><img class="img img__logo" src="https://s3-eu-west-1.amazonaws.com/forwind-net-images/assets/state51_logo.png" alt="State 51" /></a>
 </section>
