--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -4,7 +4,7 @@
             <h1 class="heading heading--page-title">About</h1>
         </div>
         <div class="content-block content-block--article">
-            <img class="img img--right" src="https://placeimg.com/300/200/nature/grayscale" alt="Alt desc" />
+            <img class="img img--right" src="https://s3-eu-west-1.amazonaws.com/forwind-net-images/news/weiya-velac-gala.png" alt="Alt desc" />
             <p>Forwind (pronounced forwYnd) is a multi-genre label currently operating from Berlin, Manchester and London.</p>
             <p>We&#39;rre not worried about fitting neatly into one section in the record shop. Our passion is for adventurous music with a serious attention to detail, from the performance to the production.</p>
             <p>Our aim is to provide a platform for music that maximises the expressive potential of sound, instruments and voices either through physical or electronic means, whether composed, constructed or improvised.</p>
