--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -37,7 +37,7 @@
             <table class="table table--release-details">
                 <caption>
                     <span class="text-title"><%= @release.cat %></span>
-                    <span class="text-title"><%= raw(munge_artist_names(@release)) %></span>
+                    <span class="text-title"><%= @release.title.upcase %></span>
                 </caption>
                 <thead class="visually-hidden">
                     <th>Track number</th>
@@ -72,31 +72,34 @@
         </div>  
 
         <div class="content-block aside__widget">
-            <h2 class="heading heading--widget"><time>2017/06/01</time></h2>
+            <h2 class="heading heading--widget"><time><%= @release.release_date.strftime("%Y/%m/%d") %></time></h2>
             <span class="text-title">Produced by <%= @release.producer %></span>
-            <span class="text-title">Mastered by <%= @release.mastering %></span>
             <span class="text-title">Artwork by <%= @release.artwork %></span>  
+            <span class="text-title">Mastered by <%= @release.mastering %></span>
+            <span class="text-title">Design by <%= @release.design %></span>
         </div>
 
         <div class="content-block aside__widget">
-            <blockquote>
-                <%= @release.quote %>
-                <cite>&mdash; <%= @release.author %></cite>
-            </blockquote>
-            <h2 class="heading heading--widget">Online reviews from </h2>
-            <% unless @release.reviews.empty? %>
-              <% @release.reviews.each do |link| %>
-                <a href=<%= link.location %>><%= link.vendor %></a>
-                <% if @release.reviews.size > 1 %>
-                  <% if @release.reviews.index(link) == @release.reviews.size - 2 %>
-                    and
-                  <% elsif @release.reviews.index(link) != @release.reviews.size - 1 %>
-                    ,
-                  <% end %>
+            <% unless @release.quote.nil? %>
+                <blockquote>
+                    <%= @release.quote %>
+                    <cite>&mdash; <%= @release.author %></cite>
+                </blockquote>
+                <h2 class="heading heading--widget">Online reviews from </h2>
+                <% unless @release.reviews.empty? %>
+                <% @release.reviews.each do |link| %>
+                    <a href=<%= link.location %>><%= link.vendor %></a>
+                    <% if @release.reviews.size > 1 %>
+                    <% if @release.reviews.index(link) == @release.reviews.size - 2 %>
+                        and
+                    <% elsif @release.reviews.index(link) != @release.reviews.size - 1 %>
+                        ,
+                    <% end %>
+                    <% end %>
+                <% end %> 
+                <br/>
                 <% end %>
-              <% end %> 
-              <br/>
-            <% end %>                      
+            <% end %>
         </div> 
     </aside>
 </article>
